src/main/java/syntactic/test/passing/newArray.ru
start {
    x = new Int[5];
}

/? CORRECTO: ANALISIS SINTACTICO