src/main/java/syntactic/test/failing/newCallNoArrayOrStruct.ru
start {
    x = new y;
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 13 | Se esperaba expresión pero se encontró ID: y |